--- a/website/css/hompagecss.css
+++ b/website/css/hompagecss.css
@@ -10,9 +10,11 @@ body{
     width: 100%;
     background-image: linear-gradient(5deg, rgba(2,0,36,1) 0%, rgba(9,121,51,0.44368912337662336) 100%, rgba(0,212,255,1) 100%), url("../img/bg1.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
     box-sizing: border-box;
-    overflow-x: hidden;
+    overflow-y: auto;
+
 }
 #nav{
     background: #EDF1D6;
